--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,6 +12,7 @@
   preview      = {m4human.png},
   preprint     = {true},
   website      = {https://fanjunqiao.github.io/M4Human-site/},
+  code         = {https://github.com/FanJunqiao/M4Human},
   selected     = {true}
 }
 @article{fan2025m4human,
@@ -50,16 +51,16 @@
 }
 
 @inproceedings{ding2025robust,
-  title={Robust Spatial Perception with 4D Radar for Mobile Autonomy},
-  author={Ding, Fangqiang},
-  booktitle={Robotics: Science and Systems-Pioneers Workshop},
-  year = {2025},
-  pdf = {https://openreview.net/pdf?id=sBqpiose0E},
-  abbr = {RSS Pioneers'25},
-  selected = {false},
-  website = {https://sites.google.com/view/rsspioneers2025/participants},
-  video = {https://youtu.be/Ol84t57lY40},
-  preview = {pioneers.png}
+  title       ={Robust Spatial Perception with 4D Radar for Mobile Autonomy},
+  author      ={Ding, Fangqiang},
+  booktitle   ={Robotics: Science and Systems-Pioneers Workshop},
+  year        = {2025},
+  pdf         = {https://openreview.net/pdf?id=sBqpiose0E},
+  abbr        = {RSS Pioneers'25},
+  selected    = {false},
+  website     = {https://sites.google.com/view/rsspioneers2025/participants},
+  video       = {https://youtu.be/Ol84t57lY40},
+  preview     = {pioneers.png}
 }
 @article{an2025dexterous,
   author       = {Shan An and Ziyu Meng and Chao Tang and Yuning Zhou and Tengyu Liu and Fangqiang Ding and Shufang Zhang and Yao Mu and Ran Song and Wei Zhang and Zeng-Guang Hou and Hong Zhang},
@@ -74,15 +75,15 @@
 }
 
 @inproceedings{sun2025apto,
-  author = {Sun, Qichu and Meng, Rui and Fan, Haishuang and Ding, Fangqiang and Lu, Linxi and Wu, Jingya and Li, Xiaowei and Yan, Guihai},
-  title = {APTO: Accelerating Serialization-Based Point Cloud Transformers with Position-Aware Pruning},
-  year = {2025},
-  booktitle = {Asia and South Pacific Design Automation Conference},
-  abbr         = {ASPDAC'25},
-  preview = {apto.png},
-  pdf = {https://dl.acm.org/doi/pdf/10.1145/3658617.3697655},
-  website = {https://dl.acm.org/doi/10.1145/3658617.3697655},
-  selected = {False}
+  author      = {Sun, Qichu and Meng, Rui and Fan, Haishuang and Ding, Fangqiang and Lu, Linxi and Wu, Jingya and Li, Xiaowei and Yan, Guihai},
+  title       = {APTO: Accelerating Serialization-Based Point Cloud Transformers with Position-Aware Pruning},
+  year        = {2025},
+  booktitle   = {Asia and South Pacific Design Automation Conference},
+  abbr        = {ASPDAC'25},
+  preview     = {apto.png},
+  pdf         = {https://dl.acm.org/doi/pdf/10.1145/3658617.3697655},
+  website     = {https://dl.acm.org/doi/10.1145/3658617.3697655},
+  selected    = {False}
 }
 @inproceedings{ding2025thermohands,
   author       = {Fangqiang Ding and
@@ -91,15 +92,15 @@
                   Gaowen Liu and
                   Chris Xiaoxuan Lu},
   title        = {ThermoHands: A Benchmark for 3D Hand Pose Estimation from Egocentric Thermal Image},
-  booktitle      = {ACM Conference on Embedded Networked Sensor Systems},
+  booktitle    = {ACM Conference on Embedded Networked Sensor Systems},
   arxiv        = {2403.09871},
   year         = {2025},
   preprint     = {true},
-  selected = {true},
-  website = {https://thermohands.github.io/},
-  code = {https://github.com/LawrenceZ22/ThermoHands},
-  video = {https://www.youtube.com/watch?v=-oXKspAEyhg},
-  preview = {thermohands.png},
+  selected     = {true},
+  website      = {https://thermohands.github.io/},
+  code         = {https://github.com/LawrenceZ22/ThermoHands},
+  video        = {https://www.youtube.com/watch?v=-oXKspAEyhg},
+  preview      = {thermohands.png},
   abbr         = {Sensys'25},
 }
 % 2024
@@ -110,15 +111,15 @@
                   Yiming Li and
                   Chris Xiaoxuan Lu},
   title        = {RadarOcc: Robust 3D Occupancy Prediction with 4D Imaging Radar},
-  booktitle   = {Advances in Neural Information Processing Systems},
+  booktitle    = {Advances in Neural Information Processing Systems},
   arxiv        = {2405.14014},
   year         = {2024},
-  selected = {true},
+  selected     = {true},
   preprint     = {true},
-  code = {https://github.com/Toytiny/RadarOcc},
-  video = {https://www.youtube.com/watch?v=sa4gejcWMvk},
-  website = {https://toytiny.github.io/publication/24-radarocc-neurips/},
-  preview = {radarocc.png},
+  code         = {https://github.com/Toytiny/RadarOcc},
+  video        = {https://www.youtube.com/watch?v=sa4gejcWMvk},
+  website      = {https://toytiny.github.io/publication/24-radarocc-neurips/},
+  preview      = {radarocc.png},
   abbr         = {NeurIPS'24},
 }
 @inproceedings{DBLP:journals/corr/abs-2306-17010,
@@ -128,14 +129,14 @@
                   Chris Xiaoxuan Lu},
   title        = {milliFlow: Scene Flow Estimation on mmWave Radar Point Cloud for Human
                   Motion Sensing},
-  booktitle   = {European Conference on Computer Vision},
+  booktitle    = {European Conference on Computer Vision},
   arxiv        = {2306.17010},
   video        = {https://www.youtube.com/watch?v=fa91EeueGHA},
   code         = {https://github.com/Toytiny/milliFlow},
   year         = {2024},
   preprint     = {true},
-  selected = {true},
-  preview = {milliflow.png},
+  selected     = {true},
+  preview      = {milliflow.png},
   abbr         = {ECCV'24},
 }
 @article{zhang2023forecasting,
@@ -162,21 +163,21 @@
   preprint = {true},
 }
 @inproceedings{DBLP:journals/corr/abs-2303-00462,
-  author    = {Fangqiang Ding and
+  author      = {Fangqiang Ding and
                Andras Palffy and
                Dariu M. Gavrila and
                Chris Xiaoxuan Lu},
-  title     = {Hidden Gems: 4D Radar Scene Flow Learning Using Cross-Modal Supervision},
+  title       = {Hidden Gems: 4D Radar Scene Flow Learning Using Cross-Modal Supervision},
   booktitle   = {{IEEE} Conference on Computer Vision and Pattern Recognition},
-  year      = {2023},
-  arxiv    = {2303.00462},
-  code = {https://github.com/Toytiny/CMFlow},
-  website = {https://toytiny.github.io/publication/23-cmflow-cvpr},
-  video = {https://www.youtube.com/watch?v=PjKgznDizhI},
-  selected = {true},
-  abbr = {CVPR'23},
-  preview = {cmflow.png},
-  award = {Selected as Highlight (top 10%)}
+  year        = {2023},
+  arxiv       = {2303.00462},
+  code        = {https://github.com/Toytiny/CMFlow},
+  website     = {https://toytiny.github.io/publication/23-cmflow-cvpr},
+  video       = {https://www.youtube.com/watch?v=PjKgznDizhI},
+  selected    = {true},
+  abbr        = {CVPR'23},
+  preview     = {cmflow.png},
+  award       = {Selected as Highlight (top 10%)}
 }
 @article{DBLP:journals/tmc/LiFDYL23,
   author       = {Bowen Li and
@@ -185,7 +186,7 @@
                   Junjie Ye and
                   Fuling Lin},
   title        = {All-Day Object Tracking for Unmanned Aerial Vehicle},
-  journal      = {{IEEE} Trans. Mob. Comput.},
+  journal      = {IEEE Transactions on Mobile Computing},
   year         = {2023},
   arxiv        = {2101.08446},
   preview      = {adtrack_2.png},
@@ -201,15 +202,15 @@
                Jianning Deng and
                Chris Xiaoxuan Lu},
   title     = {Self-Supervised Scene Flow Estimation with 4D Automotive Radar},
-  journal   = {{IEEE} Robotics Autom. Lett. / IEEE International Conference on Intelligent Robots and Systems},
+  journal   = {IEEE Robotics and Automation Letters},
   year      = {2022},
-  arxiv    = {2203.01137},
-  selected = {false},
-  preview = {raflow.png},
-  code = {https://github.com/Toytiny/RaFlow},
-  video = {https://www.youtube.com/watch?v=5_iJCZytrxo},
-  website = {https://toytiny.github.io/publication/22-raflow-ral},
-  abbr = {RA-L/IROS}
+  arxiv     = {2203.01137},
+  selected  = {false},
+  preview   = {raflow.png},
+  code      = {https://github.com/Toytiny/RaFlow},
+  video     = {https://www.youtube.com/watch?v=5_iJCZytrxo},
+  website   = {https://toytiny.github.io/publication/22-raflow-ral},
+  abbr      = {RA-L}
 }
 @article{DBLP:journals/tie/YeFLDAL22,
   author       = {Junjie Ye and
@@ -219,150 +220,150 @@
                   Shan An and
                   Geng Lu},
   title        = {Multi-Regularized Correlation Filter for {UAV} Tracking and Self-Localization},
-  journal      = {{IEEE} Trans. Ind. Electron.},
+  journal      = {IEEE Transactions on Industrial Electronics},
   year         = {2022},
-  preview = {mrcf.png},
-  pdf    = {https://ieeexplore.ieee.org/abstract/document/9457090},
-  code = {https://github.com/vision4robotics/MRCF-Tracker},
-  video = {https://www.youtube.com/watch?v=XzkreAPynE4},
-  abbr = {TIE}
+  preview      = {mrcf.png},
+  pdf          = {https://ieeexplore.ieee.org/abstract/document/9457090},
+  code         = {https://github.com/vision4robotics/MRCF-Tracker},
+  video        = {https://www.youtube.com/watch?v=XzkreAPynE4},
+  abbr         = {TIE}
 }
 @inproceedings{DBLP:conf/icra/0001LYYCD22,
-  author       = {Changhong Fu and
+  author        = {Changhong Fu and
                   Sihang Li and
                   Xinnan Yuan and
                   Junjie Ye and
                   Ziang Cao and
                   Fangqiang Ding},
-  title        = {Ad2Attack: Adaptive Adversarial Attack on Real-Time
+  title         = {Ad2Attack: Adaptive Adversarial Attack on Real-Time
                   {UAV} Tracking},
-  booktitle    = {{IEEE} International Conference on Robotics and Automation},
-  year         = {2022},
-  arxiv = {2203.01516},
-  preview = {ad2attack.png},
-  code = {https://github.com/vision4robotics/Ad2Attack},
-  video = {https://www.bilibili.com/video/BV1S44y1b7xC/?spm_id_from=333.999.0.0},
-  abbr = {ICRA'22}
+  booktitle     = {{IEEE} International Conference on Robotics and Automation},
+  year          = {2022},
+  arxiv         = {2203.01516},
+  preview       = {ad2attack.png},
+  code          = {https://github.com/vision4robotics/Ad2Attack},
+  video         = {https://www.bilibili.com/video/BV1S44y1b7xC/?spm_id_from=333.999.0.0},
+  abbr          = {ICRA'22}
 }
 @ARTICLE{9445732,
-  author={Fu, Changhong and Li, Bowen and Ding, Fangqiang and Lin, Fuling and Lu, Geng},
-  journal={IEEE Geosci. Remote Sens. Mag.}, 
-  title={Correlation Filters for Unmanned Aerial Vehicle-Based Aerial Tracking: A Review and Experimental Evaluation}, 
-  year={2022},
-  pdf = {https://ieeexplore.ieee.org/abstract/document/9445732},
-  code = {https://github.com/vision4robotics/DCFTracking4UAV},
-  video = {https://www.youtube.com/watch?v=LPdmTjt5Nv0},
-  abbr = {GRSM},
-  preview = {grsm.png},
+  author    ={Fu, Changhong and Li, Bowen and Ding, Fangqiang and Lin, Fuling and Lu, Geng},
+  journal   ={IEEE Geoscience and Remote Sensing Magazine}, 
+  title     ={Correlation Filters for Unmanned Aerial Vehicle-Based Aerial Tracking: A Review and Experimental Evaluation}, 
+  year      ={2022},
+  pdf       = {https://ieeexplore.ieee.org/abstract/document/9445732},
+  code      = {https://github.com/vision4robotics/DCFTracking4UAV},
+  video     = {https://www.youtube.com/watch?v=LPdmTjt5Nv0},
+  abbr      = {GRSM},
+  preview    = {grsm.png},
 }
 % 2021
 @article{DBLP:journals/eaai/FuDLJF21,
-  author       = {Changhong Fu and
+  author        = {Changhong Fu and
                   Fangqiang Ding and
                   Yiming Li and
                   Jin Jin and
                   Chen Feng},
-  title        = {Learning dynamic regression with automatic distractor repression for
+  title         = {Learning dynamic regression with automatic distractor repression for
                   real-time {UAV} tracking},
-  journal      = {Eng. Appl. Artif. Intell.},
-  year         = {2021},
-  pdf = {https://www.sciencedirect.com/science/article/pii/S0952197620303560},
-  code = {https://github.com/vision4robotics/DR2Track/tree/master/DR2Track2},
-  video = {https://www.youtube.com/watch?v=49ko4Roexsw},
-  preview = {dr2track.png},
-  abbr = {EAAI}
+  journal       = {Engineering Applications of Artificial Intelligence},
+  year          = {2021},
+  pdf           = {https://www.sciencedirect.com/science/article/pii/S0952197620303560},
+  code          = {https://github.com/vision4robotics/DR2Track/tree/master/DR2Track2},
+  video         = {https://www.youtube.com/watch?v=49ko4Roexsw},
+  preview       = {dr2track.png},
+  abbr          = {EAAI}
 }
 @inproceedings{DBLP:conf/icra/Li0DYL21,
-  author       = {Bowen Li and
+  author      = {Bowen Li and
                   Changhong Fu and
                   Fangqiang Ding and
                   Junjie Ye and
                   Fuling Lin},
-  title        = {ADTrack: Target-Aware Dual Filter Learning for Real-Time Anti-Dark
+  title       = {ADTrack: Target-Aware Dual Filter Learning for Real-Time Anti-Dark
                   {UAV} Tracking},
-  booktitle    = {{IEEE} International Conference on Robotics and Automation},
-  year         = {2021},
-  arxiv = {2106.02495},
-  code = {https://github.com/vision4robotics/ADTrack},
-  preview = {adtrack.png},
-  video = {https://www.youtube.com/watch?v=8ZnGOwoqDZ8},
-  abbr = {ICRA'21}
+  booktitle   = {{IEEE} International Conference on Robotics and Automation},
+  year        = {2021},
+  arxiv       = {2106.02495},
+  code        = {https://github.com/vision4robotics/ADTrack},
+  preview     = {adtrack.png},
+  video       = {https://www.youtube.com/watch?v=8ZnGOwoqDZ8},
+  abbr        = {ICRA'21}
 }
 @ARTICLE{9565346,
-  author={Fu, Changhong and Jin, Jin and Ding, Fangqiang and Li, Yiming and Lu, Geng},
-  journal={IEEE Trans. Multimed.}, 
-  title={Spatial Reliability Enhanced Correlation Filter: An Efficient Approach for Real-Time UAV Tracking}, 
-  year={2021},
-  pdf = {https://ieeexplore.ieee.org/document/9565346},
-  code = {https://github.com/vision4robotics/SRECF-Tracker/tree/master/SRECF%20(TMM)},
-  video = {https://www.youtube.com/watch?v=4EaLxvz8_Sw},
-  preview = {srecf.png},
-  abbr = {TMM}
+  author      = {Fu, Changhong and Jin, Jin and Ding, Fangqiang and Li, Yiming and Lu, Geng},
+  journal     = {IEEE Transactions on Multimedia}, 
+  title       = {Spatial Reliability Enhanced Correlation Filter: An Efficient Approach for Real-Time UAV Tracking}, 
+  year        = {2021},
+  pdf         = {https://ieeexplore.ieee.org/document/9565346},
+  code        = {https://github.com/vision4robotics/SRECF-Tracker/tree/master/SRECF%20(TMM)},
+  video       = {https://www.youtube.com/watch?v=4EaLxvz8_Sw},
+  preview     = {srecf.png},
+  abbr        = {TMM}
   }
 @inproceedings{DBLP:conf/icra/Zheng0YLD21,
-  author       = {Guangze Zheng and
+  author      = {Guangze Zheng and
                   Changhong Fu and
                   Junjie Ye and
                   Fuling Lin and
                   Fangqiang Ding},
-  title        = {Mutation Sensitive Correlation Filter for Real-Time {UAV} Tracking
+  title       = {Mutation Sensitive Correlation Filter for Real-Time {UAV} Tracking
                   with Adaptive Hybrid Label},
-  booktitle    = {{IEEE} International Conference on Robotics and Automation},
-  year         = {2021},
-  arxiv = {2106.08073},
-  preview = {mscf.png},
-  code = {https://github.com/vision4robotics/MSCF-tracker},
-  video = {https://www.youtube.com/watch?v=4EPGBCuatxU},
-  abbr = {ICRA'21}
+  booktitle   = {{IEEE} International Conference on Robotics and Automation},
+  year        = {2021},
+  arxiv       = {2106.08073},
+  preview     = {mscf.png},
+  code        = {https://github.com/vision4robotics/MSCF-tracker},
+  video       = {https://www.youtube.com/watch?v=4EPGBCuatxU},
+  abbr        = {ICRA'21}
 }
 % 2020
 @inproceedings{DBLP:conf/cvpr/Li0DHL20,
-  author       = {Yiming Li and
+  author        = {Yiming Li and
                   Changhong Fu and
                   Fangqiang Ding and
                   Ziyuan Huang and
                   Geng Lu},
-  title        = {AutoTrack: Towards High-Performance Visual Tracking for {UAV} With
+  title         = {AutoTrack: Towards High-Performance Visual Tracking for {UAV} With
                   Automatic Spatio-Temporal Regularization},
-  booktitle    = {{IEEE} Conference on Computer Vision and Pattern Recognition},
-  year         = {2020},
-  pdf = {https://openaccess.thecvf.com/content_CVPR_2020/papers/Li_AutoTrack_Towards_High-Performance_Visual_Tracking_for_UAV_With_Automatic_Spatio-Temporal_CVPR_2020_paper.pdf},
-  code = {https://github.com/vision4robotics/AutoTrack},
-  video = {https://www.youtube.com/watch?v=2w8Mophui1k},
-  preview = {autotrack.png},
-  abbr = {CVPR'20}
+  booktitle     = {{IEEE} Conference on Computer Vision and Pattern Recognition},
+  year          = {2020},
+  pdf           = {https://openaccess.thecvf.com/content_CVPR_2020/papers/Li_AutoTrack_Towards_High-Performance_Visual_Tracking_for_UAV_With_Automatic_Spatio-Temporal_CVPR_2020_paper.pdf},
+  code          = {https://github.com/vision4robotics/AutoTrack},
+  video         = {https://www.youtube.com/watch?v=2w8Mophui1k},
+  preview       = {autotrack.png},
+  abbr          = {CVPR'20}
 }
 @inproceedings{DBLP:conf/iros/Ding00J020,
-  author       = {Fangqiang Ding and
+  author        = {Fangqiang Ding and
                   Changhong Fu and
                   Yiming Li and
                   Jin Jin and
                   Chen Feng},
-  title        = {Automatic Failure Recovery and Re-Initialization for Online {UAV}
+  title         = {Automatic Failure Recovery and Re-Initialization for Online {UAV}
                   Tracking with Joint Scale and Aspect Ratio Optimization},
-  booktitle    = {{IEEE} International Conference on Intelligent Robots and Systems},
-  year         = {2020},
-  arxiv = {2008.03915},
-  preview = {jsar.png},
-  code = {https://github.com/vision4robotics/JSAR-Tracker},
-  video = {https://www.youtube.com/watch?v=wNFhkpH6osk},
-  abbr = {IROS'20}
+  booktitle     = {{IEEE} International Conference on Intelligent Robots and Systems},
+  year          = {2020},
+  arxiv         = {2008.03915},
+  preview       = {jsar.png},
+  code          = {https://github.com/vision4robotics/JSAR-Tracker},
+  video         = {https://www.youtube.com/watch?v=wNFhkpH6osk},
+  abbr          = {IROS'20}
 }
 @inproceedings{DBLP:conf/iros/0001D0J020,
-  author       = {Changhong Fu and
+  author        = {Changhong Fu and
                   Fangqiang Ding and
                   Yiming Li and
                   Jin Jin and
                   Chen Feng},
-  title        = {DR2Track: Towards Real-Time Visual Tracking for {UAV}
+  title         = {DR2Track: Towards Real-Time Visual Tracking for {UAV}
                   via Distractor Repressed Dynamic Regression},
-  booktitle    = {{IEEE} International Conference on Intelligent Robots and Systems},
-  year         = {2020},
-  arxiv = {2008.03912},
-  preview = {dr2track2.png},
-  code = {https://github.com/vision4robotics/DR2Track/tree/master/DR2Track1},
-  video = {https://www.youtube.com/watch?v=HQz_xIu9XOc},
-  abbr = {IROS'20}
+  booktitle     = {{IEEE} International Conference on Intelligent Robots and Systems},
+  year          = {2020},
+  arxiv         = {2008.03912},
+  preview       = {dr2track2.png},
+  code          = {https://github.com/vision4robotics/DR2Track/tree/master/DR2Track1},
+  video         = {https://www.youtube.com/watch?v=HQz_xIu9XOc},
+  abbr          = {IROS'20}
 }
 @inproceedings{DBLP:conf/iros/00030DHP20,
   author       = {Yiming Li and
@@ -373,9 +374,9 @@
   title        = {Augmented Memory for Correlation Filters in Real-Time {UAV} Tracking},
   booktitle    = {{IEEE} International Conference on Intelligent Robots and Systems},
   year         = {2020},
-  arxiv = {1909.10989},
-  preview = {amcf.png},
-  code = {https://github.com/vision4robotics/AMCF-tracker},
-  video = {https://www.youtube.com/watch?v=CGH5o2J1ohI},
-  abbr = {IROS'20}
+  arxiv        = {1909.10989},
+  preview      = {amcf.png},
+  code         = {https://github.com/vision4robotics/AMCF-tracker},
+  video        = {https://www.youtube.com/watch?v=CGH5o2J1ohI},
+  abbr         = {IROS'20}
  }
